# ARSO_AI_practise

./: .gitignore  README.md  main.py  pyproject.toml
ARSO_beta/NLP/: broken-bert-baseline.ipynb
ARSO_beta/clusterisation/: basel1ne-cluster-1mages.ipynb  cluster_pictures.ipynb
CPM/Kaggle/: README.md
CPM/Kaggle/YouTubeComments/: main.ipynb
CPM/MLP/Homework/: nn_intro_task.ipynb
CPM/MLP/Study/: nn_intro.ipynb
CPM/MLP_CNN/Homework/: homework.ipynb
CPM/MLP_CNN/Study/: seminar.ipynb
CPM/NLP_1/Homework/: nlp_hw1.ipynb
CPM/NLP_1/Study/: demo.ipynb
CPM/shpora/: README.md  classic_ml.ipynb  cv.ipynb  dl_pytorch.ipynb  nlp.ipynb  one_day.ipynb  tabular.ipynb  tricks.ipynb
CPM/shpora/.obsidian/: workspace.json
NEOAI/: README.md
NEOAI/Tricy Table Data/: basel1ne-tricy-table-data.ipynb  main.ipynb
School/CNN/Cassava Disease Classification/: main.ipynb
School/CNN/Study/: lecture23-cnn.ipynb
School/MLP/: README.md
School/MLP/Example/: lecture22-nn.ipynb
Sirius/DL/CNN/: CNN_practice.ipynb
Sirius/DL/MLP/: PyTorch_intro.ipynb  Week_6_homework_ru_comments.ipynb
Sirius/DL/NLP/: Word2Vec_gensim.ipynb
Sirius/Kaggle/Pockemons/: main.ipynb
Sirius/Kaggle/Sirius_NLP/: npl-baseline.ipynb
Sirius/ML/PCA/: Copy_of_PCA_dimensionality_reduction_Sirius.ipynb
Sirius/ML/SVM/: SVM_clean.ipynb
Sirius/ML/bank/:  main.ipynb  Copy_of_Feature_engineering.ipynb
Sirius/ML/boosting/: practice_boosting_catboost.ipynb  practice_trees_ensembles.ipynb
Sirius/Math/Conv/: solve.ipynb
Sirius/Math/MonteCarlo/: events_probabilities.ipynb
(+13 files in other folders)
