[project]
name = "arso-ai-practise"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "catboost>=1.2.10",
    "datasets>=4.6.1",
    "gensim>=4.4.0",
    "icecream>=2.1.10",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "nltk>=3.9.3",
    "optuna>=4.7.0",
    "pandas>=2.3.3",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "umap-learn>=0.5.11",
    "xgboost>=3.2.0",
]
